# example-inferencing-generic-node

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  app.h  main.cpp
Core/edge-impulse-sdk/porting/stm32-cubeai/: ei_classifier_porting.cpp
Core/model-parameters/: model_metadata.h  model_variables.h
Core/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
conf/: app_conf.h
